--- a/.classpath
+++ b/.classpath
@@ -16,6 +16,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src/test/python"/>
 	<classpathentry kind="src" path="src/main/python"/>
+	<classpathentry kind="src" path="src/test/res"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
